<resources>
    <string name="app_name">Google Map</string>
    <string name="maps_api_key">AIzaSyDV2_xy58r15K6TskZy4KWMuhUDVq67jqM</string>
    <string name="search_map_km_unit">km</string>
    <string name="search_map_1.5km">1.5</string>
    <string name="search_map_3km">3</string>
    <string name="search_map_5km">5</string>
    <string name="search_map_10km">10</string>
    <string name="search_map_30km">30</string>
    <string name="search_map_allkm">ALL</string>

    <string-array name="maps_type">
        <item >MAP_TYPE_NONE</item>
        <item >MAP_TYPE_NORMAL</item>
        <item >MAP_TYPE_SATELLITE</item>
        <item >MAP_TYPE_HYBRID</item>
        <item >MAP_TYPE_TERRAIN</item>
    </string-array>
</resources>
